<resources>
    <string name="app_name">Shopping List</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="go_back">Go back</string>
    <string name="add">Add Item</string>
    <string name="remove">Remove Item</string>
    <string name="view">View All Items</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="remove_item">Remove Item</string>
    <string name="add_item">Add Item</string>
    <string name="checkout">Checkout</string>
    <string name="show_list">Show List</string>
    <string name="delete_item">Delete Item</string>
    <string name="card_number">Card Number</string>
    <string name="name_on_card">Name On Card</string>
    <string name="csv">CSV</string>
    <string name="mm_yy">MM/YY</string>
    <string name="pay">Pay</string>
    <string name="person">Person</string>
</resources>