<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Checkout">

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.656" />

    <TextView
        android:id="@+id/tvNoOfItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.582" />

    <EditText
        android:id="@+id/etCardName"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/round_border"
        android:ems="10"
        android:hint="@string/name_on_card"
        android:inputType="textPersonName"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tvNoOfItems"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCardNumber"
        app:layout_constraintVertical_bias="0.871" />

    <EditText
        android:id="@+id/etCardNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:autofillHints=""
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_card"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/card_number"
        android:inputType="number"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etCsv"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:autofillHints=""
        android:background="@drawable/round_border"
        android:ems="10"
        android:hint="@string/csv"
        android:inputType="number"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/etCardName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCardNumber"
        app:layout_constraintVertical_bias="0.543" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:autofillHints=""
        android:background="@drawable/round_border"
        android:ems="10"
        android:hint="@string/mm_yy"
        android:inputType="date"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/etCardName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCardNumber"
        app:layout_constraintVertical_bias="0.533" />

    <Button
        android:id="@+id/btnPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_bg"
        android:padding="16dp"
        android:text="@string/pay"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTotal" />
</androidx.constraintlayout.widget.ConstraintLayout>